--- a/_locales/ja/messages.json
+++ b/_locales/ja/messages.json
@@ -27,7 +27,7 @@
         "message": "掃除 +家事 @プライベート"
     },
     "shortcut_9": {
-        "message": ";休憩"
+        "message": "^休憩"
     },
     "register_the_string_to_the_shortcut_key": {
         "message": "ショートカットキーに文字列を登録してください。セミコロンで始まるラベルは集計しません。"
