improve: Added a keyboard shortcut to open the extension options screen.

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -38,6 +38,9 @@
     "download_description": {
         "message": "Download logs in any format."
     },
+    "options_description": {
+        "message": "Open the extension options screen."
+    },
     "download_log": {
         "message": "Download Logs"
     },
