--- a/_locales/ja/messages.json
+++ b/_locales/ja/messages.json
@@ -30,7 +30,7 @@
         "message": "^休憩"
     },
     "register_the_string_to_the_shortcut_key": {
-        "message": "ショートカットキーに文字列を登録してください。「^」で始まるタグは集計しません。"
+        "message": "ショートカットキーに文字列を登録してください。「^」で始まるタグは集計しません。<br>「;」より後ろは詳細を書き、「;」より前にある文字列のグループに含めて集計します。"
     },
     "punch_description": {
         "message": "打刻ポップアップを表示します。"
