--- a/_locales/ja/messages.json
+++ b/_locales/ja/messages.json
@@ -20,11 +20,32 @@
     "html_summary": {
         "message": "HTMLの表"
     },
+    "popup_title": {
+        "message": "Fast logbook"
+    },
     "shortcut_1": {
         "message": "勉強 +昇進試験 @仕事"
     },
     "shortcut_2": {
         "message": "掃除 +家事 @プライベート"
+    },
+    "shortcut_3": {
+        "message": ""
+    },
+    "shortcut_4": {
+        "message": ""
+    },
+    "shortcut_5": {
+        "message": ""
+    },
+    "shortcut_6": {
+        "message": ""
+    },
+    "shortcut_7": {
+        "message": ""
+    },
+    "shortcut_8": {
+        "message": ""
     },
     "shortcut_9": {
         "message": "^休憩"
